# MobCom_Project_24SS

./: .gitignore  README.md
4_Code/: .editorconfig  .gitignore  CMakeLists.txt  v2x.code-workspace
4_Code/resources/: .gitignore
4_Code/resources/ess_country_road/: add.xml  net.xml  view.xml
4_Code/resources/esslingen/: add.xml  net.xml  view.xml
4_Code/resources/esslingen_extension/: view.xml
4_Code/resources/freeway_A8/: add.xml  net.xml  view.xml
4_Code/resources/services/: BasePCService.cc  BasePCService.ned  CaAttackerService.cc  CaAttackerService.h  CaAttackerService.ned  CohdaDataIndication.cpp  CohdaDataIndication.hpp  CohdaUtility.hpp  CooperativePCService.cc  CooperativePCService.h  CooperativePCService.ned  DistancePCService.ned  HWAgent.hpp  HWAgent.ned  LoggerService.cc  LoggerService.h  LoggerService.ned  PeriodicalPCService.ned  SLOWPCService.cc  SLOWPCService.h  SLOWPCService.ned  WhisperPCService.cc  WhisperPCService.h  WhisperPCService.ned
4_Code/resources/templates/: CMakeLists.child.template.txt  CMakeLists.parent.template.txt  attackerServiceConfig.template.ini  cooperativePCConfig.template.ini  distancePCConfig.template.ini  hwConfig.template.ini  omnetpp.template.ini  periodicalPCConfig.template.ini  sensors.xml  service.logger.template.xml  service.no_attacker.template.xml  service.with_attacker.template.xml  service.with_hw.template.xml  slowPCConfig.template.ini  sumocfg.template.xml  whisperPCConfig.template.ini
4_Code/scenarios/: CMakeLists.txt
4_Code/scripts/bash/: build_project.sh
4_Code/scripts/python/: .flake8  .gitignore  Gui.py  README.md  evaluate.py  (+3 more)
(+98 files in other folders)
